--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ h1,h2{
     font-size: 2.5rem; /* Consistent size */
     line-height: 1.2; /* Add consistent line-height */
     margin-top: 2rem; 
-    margin-bottom: 1.5rem; 
+    /* margin-bottom: 1.5rem;  */
     margin-left: calc(0.25rem + 30px); /* Dynamically calculate margin based on rem and px */
     text-align: left; /* Align text to the left */
     position: static; 
@@ -472,7 +472,7 @@ h1 {
         font-size: 2.5rem; /* Consistent font size */
         line-height: 1.2; /* Add consistent line-height for mobile */
         margin-top: 2rem; /* Consistent top margin */
-        margin-bottom: 1.5rem; /* Consistent bottom margin */
+        /* margin-bottom: 1.5rem; Consistent bottom margin */
         text-align: left;
         position: static;
         width: fit-content;
